# bnb-world-model

./: .gitignore  ABSTRACT.md  ARCHITECTURE_CHANGES.txt  CHANGES.md  README.md  REPRODUCIBILITY.md  RESEARCH_ROADMAP.md  RUNBOOK.md  pyproject.toml  requirements.txt  smoke_test.py  train.py
bnb_wm/: __init__.py
bnb_wm/data/: __init__.py  datasets.py  labels.py
bnb_wm/evaluate/: __init__.py  ablation.py  benchmark.py  metrics.py
bnb_wm/model/: __init__.py  dynamics.py  encoder.py  heads.py  world_model.py
bnb_wm/solver/: __init__.py  bnb_solver.py
bnb_wm/training/: __init__.py  checkpoint.py  losses.py  trainer.py
configs/: default.yaml
notebooks/: collect_with_cuts.ipynb
paper/: README.md  anonymous-submission.tex  references.bib
scripts/: evaluate.py  generate_data.py  train.py
tests/: test_dataset.py  test_model.py
